first commit to github

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+ @import "bootstrap";
+ @import url('https://fonts.googleapis.com/css?family=Quattrocento|Quattrocento+Sans');
+
+ body {
+  font-family: 'Quattrocento Sans', sans-serif;
+ }
+
+ h1,h2,h3,h4,h5 {
+  font-family: 'Quattrocento'
+ }
