--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,21 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="container">
+    
+    <div class="text-center">
+      <h1 class="mt-5">dancetango.net</h1>
+      <p>New website under contruction</p>
+      <hr>
+    </div>
+
+    <div class="row pt-3">
+      <div class="col-md-6 text-center">
+        <h2>I am event 1</h2>
+        <p>Lorem ipsum dolor sit amet, prima alienum dolores pri in, eos veri patrioque ea. An sit nisl reque menandri. Ex aperiri convenire nam, qui idque contentiones definitiones in, te quo vidit aliquando torquatos. Ut sit mazim tritani, id stet interpretaris est. Vim ex doming necessitatibus, ea enim dolore offendit his.
+</p>
+      </div>
+      <div class="col-md-6 text-center">
+        <h2>I am event 2</h2>
+        <p>Lorem ipsum dolor sit amet, prima alienum dolores pri in, eos veri patrioque ea. An sit nisl reque menandri. Ex aperiri convenire nam, qui idque contentiones definitiones in, te quo vidit aliquando torquatos. Ut sit mazim tritani, id stet interpretaris est. Vim ex doming necessitatibus, ea enim dolore offendit his.
+</p>
+      </div>
+    </div>
+</div>
