added jenny's copy

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,11 +6,57 @@
       <hr>
     </div>
 
-    <div class="row pt-3">
+    <div class="row py-3">
       <div class="col-md-6 text-center">
-        <h2>I am event 1</h2>
-        <p>Lorem ipsum dolor sit amet, prima alienum dolores pri in, eos veri patrioque ea. An sit nisl reque menandri. Ex aperiri convenire nam, qui idque contentiones definitiones in, te quo vidit aliquando torquatos. Ut sit mazim tritani, id stet interpretaris est. Vim ex doming necessitatibus, ea enim dolore offendit his.
+        <h2> Autumn Term-Musicality and Creativity</h2>
+        <p>
+        <strong>Starts:</strong> Thurs 28th Sept<br>  
+        <strong>Finishes:</strong> Thurs 21st Dec<br>
+        <strong>Time:</strong> 8:15pm-10.00pm<br>
+        <strong>Location:</strong> Bow Road Methodist Church, E3 4LY<br>
+  
+        
+        <p>This series of mixed level classes will focus on bringing your creativity and musicality to the forefront of your dance. If you are new to tango the classes will help you hone the fundamental steps, such as the cross and pivots, as well as introducing a few new ones, such as boleos, wraps and ganchos. If you are more experienced, the classes will enable you to integrate new movement into your dance with creativity, musicality and style.</p>
+
+        <p>The class finishes at 9.30 and is followed by a 30 minute practice session.
+There is also a half term break on Thurs 26th October.</p>
+        
+        <table class="table table-striped">
+        
+          <tbody>
+            <tr>
+             
+              <td>Earlybird</td>
+              <td>£120</td>
+          
+            </tr>
+            <tr>
+           
+              <td>Full-price</td>
+              <td>£130</td>
+           
+            </tr>
+            <tr>
+            
+              <td>Drop-in</td>
+              <td>£12.50</td>
+          
+            </tr>
+          </tbody>
+        </table>
+
+
+
+
+<strong>Early bird: Valid until Sun 24th Sept</strong>
 </p>
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="5TXQV2CX5G85J">
+<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+</form>
       </div>
       <div class="col-md-6 text-center">
         <h2>I am event 2</h2>
