--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -54,14 +54,67 @@ There is also a half term break on Thurs 26th October.</p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="5TXQV2CX5G85J">
-<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPalwww.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 </form>
-      </div>
+      </div> 
+
       <div class="col-md-6 text-center">
-        <h2>I am event 2</h2>
-        <p>Lorem ipsum dolor sit amet, prima alienum dolores pri in, eos veri patrioque ea. An sit nisl reque menandri. Ex aperiri convenire nam, qui idque contentiones definitiones in, te quo vidit aliquando torquatos. Ut sit mazim tritani, id stet interpretaris est. Vim ex doming necessitatibus, ea enim dolore offendit his.
-</p>
-      </div>
+        <h2>Performance Group</h2>
+          <p>
+          <strong>Starts:</strong> Sat 21st Oct, Sat 4th Nov, Sat 2nd Dec<br>  
+          <strong>Finishes:</strong> Sat 16th Dec<br>
+          <strong>Time:</strong> 4-6pm<br>
+          <strong>Location:</strong> Berkhamsted<br>
+        
+          
+          <p>This series of four workshops will focus on giving you the experience of working on a choreography. The first hour of each workshop will focus on technique. Steps and decorations will be taught and practiced that will then be used in the choreography.In the second half, we will use a professional choreographic process to create a choreography that will culminate in a performance. These workshops are open to advanced dancers only. Must book in advance.</p>
+
+              <p>Please note these workshops are not weekly.</p>
+              
+              <table class="table table-striped">
+              
+                <tbody>
+                  <tr>
+                   
+                    <td>Earlybird</td>
+                    <td>£120</td>
+                
+                  </tr>
+                  <tr>
+                 
+                    <td>Full-price</td>
+                    <td>£150</td>
+                 
+                  </tr>
+                  <tr>
+                  
+                    <td>Drop-in</td>
+                    <td>£40</td>
+                
+                  </tr>
+                </tbody>
+              </table>
+
+
+
+
+      <strong>Early bird: Valid until Sat 7th Oct</strong>
+      </p>
+
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="562HPEJ655GHU">
+      <table>
+      <tr><td class="text-center"><input type="hidden" name="on0" value="Performance Group">Performance Group</td></tr><tr><td><select name="os0">
+        <option value="Earlybird">Earlybird £120.00 GBP</option>
+      </select> </td></tr>
+      </table>
+      <input type="hidden" name="currency_code" value="GBP">
+      <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+      </form>
+    
     </div>
+
+
 </div>
