centered form for paypal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,12 @@
  h1,h2,h3,h4,h5 {
   font-family: 'Quattrocento'
  }
+
+ form {
+  text-align: -webkit-center;
+ }
+
+ select {
+  margin-top: 5px;
+  margin-bottom: 5px;
+ }
