--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -101,7 +101,7 @@ There is also a half term break on Thurs 26th October.</p>
       <strong>Early bird: Valid until Sat 7th Oct</strong>
       </p>
 
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+      <form class="" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="562HPEJ655GHU">
       <table>
