--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -45,14 +45,15 @@
         </table>
 
 
-        <strong>Early bird: Valid until Friday 29th Sept</strong>
+        <strong>Early bird: Valid until Friday 30th Sept</strong>
 
 
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="5TXQV2CX5G85J">
-        <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPalwww.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-        </form>
+       <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+       <input type="hidden" name="cmd" value="_s-xclick">
+       <input type="hidden" name="hosted_button_id" value="5TXQV2CX5G85J">
+       <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online!">
+       <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+       </form>
       </div> 
 
       <div class="col-md-6 text-center">
