--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -6,8 +6,7 @@
 <div class="container">
   <h1 class="text-center">Courses</h1>
     
-      <%= link_to 'New Course', new_course_path, :class => 'text-white btn btn-success' %>
- 
+  
     <div class="row py-1">
       <% @courses.each do |course| %>
       <div class="col-md-6 text-center mt-4">
@@ -56,17 +55,11 @@
       
 
       <div class="row mt-2">
-        <div class="col-md-4">
+        <div class="mx-auto">
           <%= link_to 'More info', course, :class => 'text-white btn btn-primary btn-lg btn-block' %>
         </div>
         
-        <div class="col-md-4">
-          <%= link_to 'Edit', edit_course_path(course), :class => 'text-white btn btn-warning btn-lg btn-block' %>
-        </div>
-
-        <div class="col-md-4">
-          <%= link_to 'Delete', course, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'text-white btn btn-danger btn-lg btn-block' %>
-        </div>
+        
       </div>  
       </div>
       <% end %> 
